--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 axum = "0.7.5"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.12.5", features = ["json"] }
+reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
 scraper = "0.19.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
